# ros2_ref

./: commands.txt  todo.txt
ex_interfaces_pkg/: CMakeLists.txt  package.xml
ex_interfaces_pkg/msg/: ExMsgOne.msg
ex_interfaces_pkg/srv/: ExSrvOne.srv
ex_launch_pkg/: CMakeLists.txt  package.xml
ex_launch_pkg/launch/: ex_launch_1.launch.py
ex_plugin_base_pkg/: CMakeLists.txt  package.xml
ex_plugin_base_pkg/include/ex_plugin_base_pkg/plugins/: ex_plugin_base.hpp
ex_plugin_base_pkg/src/: ex_plugins_loader.cpp
ex_plugins_pkg/: CMakeLists.txt  package.xml  plugins.xml
ex_plugins_pkg/include/ex_plugins_pkg/plugins/: ex_plugin_1.hpp  ex_plugin_2.hpp
ex_plugins_pkg/src/plugins/: ex_plugin_1.cpp  ex_plugin_2.cpp
example_cpp_pkg/: CMakeLists.txt  package.xml
example_cpp_pkg/include/example_cpp_pkg/: ex_cpp_2.hpp  ex_cpp_pub_server.hpp  ex_cpp_sub_client.hpp
example_cpp_pkg/src/: ex_cpp_1.cpp  ex_cpp_2.cpp  ex_cpp_2_node.cpp  ex_cpp_pub_server.cpp  ex_cpp_pub_server_node.cpp  ex_cpp_sub_client.cpp  ex_cpp_sub_client_node.cpp
example_py_pkg/: package.xml  setup.cfg  setup.py
example_py_pkg/example_py_pkg/: ex_py_1.py  ex_py_2.py  ex_py_pub_server.py  ex_py_sub_client.py
